action steps do not share environment

--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -22,14 +22,12 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 5
-    - name: Prepare build
+    - name: Build
       run: |
         eval `brew shellenv`
         export PKG_CONFIG="$HOMEBREW_PREFIX/opt/openldap/lib/pkgconfig:$HOMEBREW_PREFIX/opt/cyrus-sasl/lib/pkgconfig"
         export GETOPT="$HOMEBREW_PREFIX/opt/gnu-getopt/bin/getopt"
         export MAKE="$HOMEBREW_PREFIX/bin/gmake"
         export pjobs="-j`nproc`"
-    - name: Build
-      run: |
         env
-        ./test-builds.sh
+        ./test-builds.sh --verbose --aggressively-use-config-cache
