--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -14,6 +14,7 @@ jobs:
     steps:
     - name: Install prerequisite packages
       run: |
+        brew update
         brew install \
           automake coreutils cppunit gawk \
           gnu-getopt gnu-sed grep \
@@ -22,6 +23,13 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 5
+    - name: ccache
+        uses: hendrikmuhs/ccache-action@v1.2
+        with:
+          create-symlink: true
+          max-size: "5G"
+          # key: ${{ matrix.os }}-${{ matrix.type }}
+          # variant: sccache
     - name: Build
       run: |
         eval `brew shellenv`
@@ -30,4 +38,5 @@ jobs:
         export MAKE="$HOMEBREW_PREFIX/bin/gmake"
         export pjobs="-j`nproc`"
         env
-        ./test-builds.sh --verbose --aggressively-use-config-cache
+        ./test-builds.sh --aggressively-use-config-cache --cleanup
+        # ./test-builds.sh --verbose --aggressively-use-config-cache
