--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -23,13 +23,13 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 5
-    - name: ccache
-        uses: hendrikmuhs/ccache-action@v1.2
-        with:
-          create-symlink: true
-          max-size: "5G"
-          # key: ${{ matrix.os }}-${{ matrix.type }}
-          # variant: sccache
+    - name: Setup ccache
+      uses: hendrikmuhs/ccache-action@v1.2
+      with:
+        create-symlink: true
+        max-size: "5G"
+        # key: ${{ matrix.os }}-${{ matrix.type }}
+        # variant: sccache
     - name: Build
       run: |
         eval `brew shellenv`
