Added an ActivityTimer wrapper for Stopwatch
thus addressing problems outlined in a693219.

--- a/src/base/Makefile.am
+++ b/src/base/Makefile.am
@@ -10,6 +10,7 @@ include $(top_srcdir)/src/Common.am
 noinst_LTLIBRARIES = libbase.la
 
 libbase_la_SOURCES = \
+	ActivityTimer.h \
 	Assure.cc \
 	Assure.h \
 	AsyncCall.cc \
