--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -24,7 +24,7 @@ jobs:
       with:
         fetch-depth: 5
     - name: Setup ccache
-      uses: hendrikmuhs/ccache-action@1.2
+      uses: hendrikmuhs/ccache-action@v1.2
       with:
         create-symlink: true
         max-size: "333M"
