--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -23,14 +23,14 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 5
-    - name: Setup ccache
-      uses: hendrikmuhs/ccache-action@v1.2
-      with:
-        create-symlink: true
-        max-size: "333M"
-        key: "ccache-${{ runner.os }}-${{ runner.arch }}"
-        append-timestamp: true
-        # variant: sccache
+    # - name: Setup ccache
+    #   uses: hendrikmuhs/ccache-action@v1.2
+    #   with:
+    #     create-symlink: true
+    #     max-size: "333M"
+    #     key: "ccache-${{ runner.os }}-${{ runner.arch }}"
+    #     append-timestamp: true
+    #     # variant: sccache
     - name: Build
       run: |
         eval `brew shellenv`
