--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -94,7 +94,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ ubuntu-22.04, macos-latest ]
+        os: [ ubuntu-22.04, macos-14 ]
         layer:
           - layer-00-default
           - layer-01-minimal
@@ -135,8 +135,7 @@ jobs:
           eval `brew shellenv`
           export PKG_CONFIG_PATH="$HOMEBREW_PREFIX/opt/openldap/lib/pkgconfig:$HOMEBREW_PREFIX/opt/cyrus-sasl/lib/pkgconfig"
           export GETOPT="$HOMEBREW_PREFIX/opt/gnu-getopt/bin/getopt"
-          export pjobs="-j`nproc`"
-          export MAKE="$HOMEBREW_PREFIX/bin/gmake ${pjobs}"
+          export MAKE="$HOMEBREW_PREFIX/bin/gmake"
           ./test-builds.sh --aggressively-use-config-cache ${{ matrix.layer }}
 
       - name: Publish build logs
