do not cache ./configure values

--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -122,7 +122,7 @@ jobs:
 
       - name: Run build on Linux
         if: runner.os == 'Linux'
-        run: ./test-builds.sh --aggressively-use-config-cache
+        run: ./test-builds.sh ${{ matrix.layer }}
 
       - name: Run build on MacOS
         if: runner.os == 'macOS'
@@ -130,8 +130,9 @@ jobs:
           eval `brew shellenv`
           export PKG_CONFIG_PATH="$HOMEBREW_PREFIX/opt/openldap/lib/pkgconfig:$HOMEBREW_PREFIX/opt/cyrus-sasl/lib/pkgconfig"
           export GETOPT="$HOMEBREW_PREFIX/opt/gnu-getopt/bin/getopt"
-          export MAKE="$HOMEBREW_PREFIX/bin/gmake"
-          ./test-builds.sh --aggressively-use-config-cache
+          export pjobs="-j`nproc`"
+          export MAKE="$HOMEBREW_PREFIX/bin/gmake ${pjobs}"
+          ./test-builds.sh ${{ matrix.layer }}
 
       - name: Publish build logs
         if: success() || failure()
