--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -131,7 +131,7 @@ jobs:
           export PKG_CONFIG_PATH="$HOMEBREW_PREFIX/opt/openldap/lib/pkgconfig:$HOMEBREW_PREFIX/opt/cyrus-sasl/lib/pkgconfig"
           export GETOPT="$HOMEBREW_PREFIX/opt/gnu-getopt/bin/getopt"
           export pjobs="-j`nproc`"
-          export MAKE="$HOMEBREW_PREFIX/bin/gmake ${pjobs}"
+          export MAKE="$HOMEBREW_PREFIX/bin/gmake"
           ./test-builds.sh ${{ matrix.layer }}
 
       - name: Publish build logs
