--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -114,7 +114,7 @@ jobs:
         run: |
           brew install \
             automake coreutils cppunit gawk \
-            gnu-getopt gnu-sed grep \
+            gnu-getopt gnu-sed grep libtool \
             make openldap cyrus-sasl
 
       - name: Checkout sources
