--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -115,7 +115,8 @@ jobs:
           brew install \
             automake coreutils cppunit gawk \
             gnu-getopt gnu-sed grep libtool \
-            make openldap openssl cyrus-sasl
+            make openldap cyrus-sasl && \
+          brew reinstall openssl@3
 
       - name: Checkout sources
         uses: actions/checkout@v4
@@ -128,7 +129,7 @@ jobs:
         if: runner.os == 'macOS'
         run: |
           eval `brew shellenv`
-          export PKG_CONFIG_PATH="$HOMEBREW_PREFIX/opt/openldap/lib/pkgconfig:$HOMEBREW_PREFIX/opt/cyrus-sasl/lib/pkgconfig"
+          export PKG_CONFIG_PATH="$HOMEBREW_PREFIX/lib/pkgconfig:$HOMEBREW_PREFIX/opt/openldap/lib/pkgconfig:$HOMEBREW_PREFIX/opt/cyrus-sasl/lib/pkgconfig"
           export GETOPT="$HOMEBREW_PREFIX/opt/gnu-getopt/bin/getopt"
           if gcc --version | grep -q clang ; then
             export CFLAGS="$CFLAGS -Wno-compound-token-split-by-macro" # needed fir ltdl
@@ -136,7 +137,7 @@ jobs:
           export pjobs="-j`nproc`"
           export MAKE="$HOMEBREW_PREFIX/bin/gmake"
           export CPPFLAGS=-I/opt/homebrew/include # openssl fails without this
-          ./test-builds.sh
+          ./test-builds.sh layer-02-maximus # remove this once openssl builds on macos
 
       - name: Publish build logs
         if: success() || failure()
