specifying LDFLAGS for lcrypto

--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -115,8 +115,7 @@ jobs:
           brew install \
             automake coreutils cppunit gawk \
             gnu-getopt gnu-sed grep libtool \
-            make openldap cyrus-sasl && \
-          brew reinstall openssl@3
+            make openldap openssl@3 cyrus-sasl
 
       - name: Checkout sources
         uses: actions/checkout@v4
@@ -132,11 +131,12 @@ jobs:
           export PKG_CONFIG_PATH="$HOMEBREW_PREFIX/lib/pkgconfig:$HOMEBREW_PREFIX/opt/openldap/lib/pkgconfig:$HOMEBREW_PREFIX/opt/cyrus-sasl/lib/pkgconfig"
           export GETOPT="$HOMEBREW_PREFIX/opt/gnu-getopt/bin/getopt"
           if gcc --version | grep -q clang ; then
-            export CFLAGS="$CFLAGS -Wno-compound-token-split-by-macro" # needed fir ltdl
+            export CFLAGS="-Wno-compound-token-split-by-macro${CFLAGS+ $CFLAGS}" # needed fir ltdl
           fi
           export pjobs="-j`nproc`"
           export MAKE="$HOMEBREW_PREFIX/bin/gmake"
-          export CPPFLAGS=-I/opt/homebrew/include # openssl fails without this
+          export CPPFLAGS="-I$HOMEBREW_PREFIX/include${CPPFLAGS+ $CPPFLAGS}" # openssl fails without this
+          export LDFLAGS="-L$HOMEBREW_PREFIX/lib${LDFLAGS+ $LDFLAGS}"
           ./test-builds.sh layer-02-maximus # remove this once openssl builds on macos
 
       - name: Publish build logs
