Format mgr:5min and mgr:60min as YAML

--- a/src/time/Makefile.am
+++ b/src/time/Makefile.am
@@ -12,6 +12,8 @@ noinst_LTLIBRARIES = libtime.la
 libtime_la_SOURCES = \
 	Engine.cc \
 	Engine.h \
+	YamlDateTime.cc \
+	YamlDateTime.h \
 	forward.h \
 	gadgets.cc \
 	gadgets.h \
