CI: better parallelism for functionality-test build (#1805)
Use nproc to detect the actual number of CPU cores available instead of
going by an old "2 cores" value from GitHub Actions runners docs.

--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -44,7 +44,7 @@ jobs:
 
       - run: ./bootstrap.sh
       - run: ./configure --with-openssl
-      - run: make -j2
+      - run: make -j`nproc`
       - run: |
           sudo make install
           sudo chown -R nobody:nogroup /usr/local/squid
