Update TestCacheManager to cope with new framing code

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2564,7 +2564,6 @@ tests_testCacheManager_SOURCES = \
 	tests/stub_libdiskio.cc \
 	tests/stub_liberror.cc \
 	tests/stub_libsecurity.cc \
-	tests/stub_libstore.cc \
 	tests/stub_main_cc.cc \
 	mem_node.cc \
 	mime.cc \
@@ -2633,6 +2632,7 @@ tests_testCacheManager_LDADD = \
 	acl/libstate.la \
 	acl/libapi.la \
 	dns/libdns.la \
+	store/libstore.la \
 	base/libbase.la \
 	ip/libip.la \
 	fs/libfs.la \
