--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -98,8 +98,8 @@ jobs:
           - ubuntu-22.04
           - macos-14
         compiler:
-          - gcc
-          - clang
+          - { CC: gcc, CXX: g++ }
+          - { CC: clang, CXX: clang++ }
         exclude:
             # on macos, we only test Xcode, aka clang
             - { os: macos-14, compiler: gcc }
