Do not install unused clang
If we have to pick one, a "pure gcc" test is more
valuable than a "gcc while clang is installed" test.

--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -126,7 +126,7 @@ jobs:
           sudo sed --in-place -E 's/# (deb-src.*updates main)/  \1/g' /etc/apt/sources.list
           sudo apt-get --quiet=2 update
           sudo apt-get --quiet=2 build-dep squid
-          sudo apt-get --quiet=2 install linuxdoc-tools libtool-bin clang
+          sudo apt-get --quiet=2 install linuxdoc-tools libtool-bin ${{ matrix.compiler.CC }}
 
       - name: Install prerequisite MacOS packages
         if: runner.os == 'macOS'
